--- a/webapp/src/css/inbox.less
+++ b/webapp/src/css/inbox.less
@@ -1072,7 +1072,6 @@ a.fa:hover {
 }
 
 .reporting,
-.about,
 .configuration,
 .testing {
   background-color: #ffffff;
