--- a/webapp/src/css/theme.less
+++ b/webapp/src/css/theme.less
@@ -123,25 +123,6 @@ a {
   }
 }
 
-dl.horizontal {
-  dt {
-    width: 200px;
-    float: left;
-    text-align: right;
-    margin-bottom: 5px;
-  }
-  dd {
-    margin-left: 0;
-    padding-left: 220px;
-    word-break: break-all;
-  }
-  dd:after {
-    content: '';
-    display: block;
-    clear: both;
-  }
-}
-
 .weeks-pregnant {
   &.upcoming-edd {
     color: @ok-color;
